--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,4 +54,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["event_stream"] 
+packages = ["event_stream", "bolt_api"] 
